crates/ryft-macros-tests/tests/parameters/error_references.stderr
error: The generic parameter that is bounded by 'Parameter' indicates the parameter type that is used by '#[derive(Parameterized)]' and cannot have any bounds other than the 'Parameter' bound.
 --> tests/parameters/error_references.rs:4:36
  |
4 | struct StructWithReferences<'p, P: 'p + Parameter> {
  |                                    ^^

error: Ryft parameters must be owned. References are not allowed.
 --> tests/parameters/error_references.rs:7:18
  |
7 |     parameter_0: &'p P,
  |                  ^^^^^

error: Ryft parameters must be owned. References are not allowed.
 --> tests/parameters/error_references.rs:8:18
  |
8 |     parameter_1: &'p P,
  |                  ^^^^^

error: The generic parameter that is bounded by 'Parameter' indicates the parameter type that is used by '#[derive(Parameterized)]' and cannot have any bounds other than the 'Parameter' bound.
  --> tests/parameters/error_references.rs:12:42
   |
12 | struct StructWithNestedReferences<'p, P: 'p + Parameter> {
   |                                          ^^

error: Ryft parameters must be owned. References are not allowed.
  --> tests/parameters/error_references.rs:14:34
   |
14 |     parameter_1: (P, (P, (usize, &'p P))),
   |                                  ^^^^^
